# DIRECT

./: .gitignore  README.md  index.html  pyproject.toml
dataset/: basedataset.py  composed_dataset.py  data_utils.py  mvimgnet.py  sa1b.py
dataset_config/: direct_stage1_512.yaml  direct_stage2_1024.yaml
direct/: geometry.py  pipeline.py
preprocess/: README.md  preprocess_example.py
training/: acc_config_4gpu.yaml  train_direct.py  train_direct_stage1.sh  train_direct_stage2.sh
